# htmx-sandbox

./: README.md  main.py  pyproject.toml
templates/: base.html  custom_events.html  index.html  inline_edit.html  loaders.html  modal_demo.html  modal_form.html  oob_swaps.html  slow_response.html  sse.html  sse_chat.html  sse_chat_form.html  sse_chat_message.html  user_detail.html  user_edit_form.html  user_oob_detail.html
