[project]
name = "htmx-sandbox"
version = "0.1.0"
description = "HTMX features demonstration with FastAPI"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.7",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
